<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Auth App</string>
    <string name="web_client_id" tools:ignore="ExtraTranslation">591259511257-4jl3sdkidpat2fdgsgot2bm8a41ddkt9.apps.googleusercontent.com</string>
    <string name="web_client_secret" tools:ignore="ExtraTranslation">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</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="cellular_number">Cellular Number</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
</resources>